--- a/src/app/shared/components/commun/side-menu/side-menu.component.scss
+++ b/src/app/shared/components/commun/side-menu/side-menu.component.scss
@@ -9,3 +9,9 @@
 .side-menu-title-holder{
     margin-top: 20px;
 }
+.full-height-sider {
+    height: 100vh !important;
+    display: flex;
+    flex-direction: column;
+  }
+  
