--- a/src/app/root/shell/factures/factures.component.scss
+++ b/src/app/root/shell/factures/factures.component.scss
@@ -7,3 +7,41 @@
     margin-top: 15px;
     margin-bottom: 15px;
 }
+.carre-btn {
+    width: 40px;
+    height: 40px;
+    padding: 0;
+    font-size: 24px;
+    text-align: center;
+    line-height: 1;
+  }
+  .status-tag {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px; /* ✅ rectangle fixe pour tous */
+    height: 26px;
+    font-weight: 500;
+    font-size: 13px;
+    border-radius: 4px;
+    border: 1px solid transparent;
+  }
+  
+  .status-ok {
+    background-color: #f6ffed;
+    color: #389e0d;
+    border-color: #b7eb8f;
+  }
+  
+  .status-attente {
+    background-color: #fff1f0;
+    color: #cf1322;
+    border-color: #ffa39e;
+  }
+  
+  .status-vide {
+    background-color: #e6f4ff;
+    color: #1677ff;
+    border-color: #91caff;
+  }
+  
