--- a/src/app/root/shell/loyer/loyer.component.scss
+++ b/src/app/root/shell/loyer/loyer.component.scss
@@ -1,3 +1,30 @@
-.carburant-table-holder{
-    margin-top: 10px;
-}
+.status-tag {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px; /* ✅ rectangle fixe pour tous */
+    height: 26px;
+    font-weight: 500;
+    font-size: 13px;
+    border-radius: 4px;
+    border: 1px solid transparent;
+  }
+  
+  .status-ok {
+    background-color: #f6ffed;
+    color: #389e0d;
+    border-color: #b7eb8f;
+  }
+  
+  .status-attente {
+    background-color: #fff1f0;
+    color: #cf1322;
+    border-color: #ffa39e;
+  }
+  
+  .status-vide {
+    background-color: #e6f4ff;
+    color: #1677ff;
+    border-color: #91caff;
+  }
+  
