--- a/src/app/root/shell/lubrifiant/lubrifiant.component.html
+++ b/src/app/root/shell/lubrifiant/lubrifiant.component.html
@@ -1,33 +1,48 @@
-<nz-collapse>
-    <nz-collapse-panel [nzActive]="true" [nzHeader]="'Filtres'">
-        <p>
-            carburant
-        </p>
-    </nz-collapse-panel>
-</nz-collapse>
+<app-filters (filtersChanged)="onFiltersChanged($event)"></app-filters>
 
-<div class="carburant-table-holder">
 
-</div>
-<nz-table #basicTable [nzData]="listOfData" [nzLoading]="true" [nzNoResult]="'En cours...'">
+<!-- Tableau des Lubrfiants -->
+<div class="shells-table-holder" style="margin-top: 30px; margin-bottom: 50px;">
+  <nz-table 
+    #basicTable 
+    [nzData]="shells" 
+    [nzPaginationPosition]="'top'"
+    [nzScroll]="{ y: '300px' }" 
+    nzSize="middle" 
+    [nzLoading]="loadingSpinner"
+    [nzNoResult]="'NO FACTURES'">
+    
     <thead>
       <tr>
-        <th>Name</th>
-        <th>Age</th>
-        <th>Address</th>
-        <th>Action</th>
+        <th nzWidth="120px">Num Facture</th>
+        <th nzWidth="130px">Date Operation</th>
+        <th nzWidth="180px">Nature Operation</th>
+        <th nzWidth="150px">Date Prélèvement</th>
+        <th nzWidth="100px">Montant</th>
+        <th nzWidth="120px">Status</th>
+        <th nzWidth="100px">Station</th>
+        <th nzWidth="80px">Actions</th>
       </tr>
     </thead>
+
     <tbody>
       <tr *ngFor="let data of basicTable.data">
-        <td>{{ data.name }}</td>
-        <td>{{ data.age }}</td>
-        <td>{{ data.address }}</td>
-        <td>
-          <a>Action 一 {{ data.name }}</a>
-          <nz-divider nzType="vertical"></nz-divider>
-          <a>Delete</a>
+        <td>{{ data.numeroFacture }}</td>
+        <td>{{ data.dateOperation | date:'d MMMM y' }}</td>
+        <td>{{ data.natureOperation }}</td>
+        <td>{{ data.datePrelevement | date:'d MMMM y' }}</td>
+        <td>{{ data.montant }}</td>
+        <td style="text-align: center;">
+          <div [ngSwitch]="data.statut">
+            <span *ngSwitchCase="'OK'" class="status-tag status-ok">{{ data.statut }}</span>
+            <span *ngSwitchCase="'EN_ATTENTE'" class="status-tag status-attente">{{ data.statut }}</span>
+            <span *ngSwitchCase="'VIDE'" class="status-tag status-vide">{{ data.statut }}</span>
+          </div>
         </td>
+        <td>{{ data.station }}</td>
+        <td>...</td>
       </tr>
     </tbody>
-  </nz-table>
+    
+  </nz-table>  
+</div>
