--- a/src/app/root/bank/prelevements/prelevements.component.scss
+++ b/src/app/root/bank/prelevements/prelevements.component.scss
@@ -11,3 +11,26 @@
     text-align: center;
     line-height: 1;
   }
+
+  .center-eye {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .eye-button i {
+    font-size: 24px;
+    color: #1890ff;
+    transition: transform 0.2s ease, color 0.2s ease;
+  }
+  
+  .eye-button:hover i {
+    transform: scale(1.3);
+    color: #40a9ff;
+  }
+  
+  .eye-disabled i {
+    font-size: 24px;
+    color: grey;
+    cursor: not-allowed;
+  }
